fix: removed code smell on method that has more than 7 attributes. Recommended by SonarCube
Signed-off-by: Berke Akkaya <berke.akkaya@bearingpoint.com>